# githubAction-test

./: .gitignore  db.sqlite3  manage.py  pyproject.toml  test.sh
.github/workflows/: ci.yml
DNinja/: asgi.py  settings.py  urls.py  wsgi.py
DNinja/tests/: test_view.py
